WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285286
REGRESSION (
284074@main
): Absolute positioned child with percent should include containing block padding
https://bugs.webkit.org/show_bug.cgi?id=285286
Summary
REGRESSION (284074@main): Absolute positioned child with percent should inclu...
Ahmad Saleem
Reported
2025-01-01 18:04:35 PST
Hi Team, While going through Blink's commit, I came across another failing specifically in Safari / WebKit and from quick code scan, it seems we are doing right thing, so it might not be direct merge but something we might need to explore and fix. Test Case (absolute-child-with-percent-padding-inside-relative-parent.html):
https://jsfiddle.net/ma50ncsp/
^ Text `PASS` next to black container is not showing in WebKit ToT (Minibrowser) Blink Commit:
https://chromium.googlesource.com/chromium/src.git/+/9908f45b70b65fc242e050d33c67294fe870a1cb
WebKit Source below:
> `RenderTable.cpp` -
https://searchfox.org/wubkat/rev/334d5acc1496f43ce5ffbc3abc190f145f9add1a/Source/WebCore/rendering/RenderTable.cpp#283
We are already calling `containingBlockLogicalWidthForContent()` here.
> `RenderBox.cpp` -
https://searchfox.org/wubkat/rev/334d5acc1496f43ce5ffbc3abc190f145f9add1a/Source/WebCore/rendering/RenderBox.cpp#2261
return isOutOfFlowPositioned() ? containingBlock->clientLogicalWidth() : containingBlock->availableLogicalWidth(); ^ In case of OOF - we are returning clientLogicalWidth similar to Blink's patch. Just documenting, so we can track and fix the issue. Might need Antti or Alan's help here. Thanks!
Attachments
[fast-cq]Patch
(3.24 KB, patch)
2025-01-03 13:23 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-03 10:24:44 PST
<
rdar://problem/142321535
>
alan
Comment 2
2025-01-03 13:23:15 PST
Created
attachment 473768
[details]
[fast-cq]Patch
EWS
Comment 3
2025-01-06 05:34:38 PST
Committed
288460@main
(1819b1a40777): <
https://commits.webkit.org/288460@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 473768
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug