REGRESSION (284074@main): Absolute positioned child with percent should include containing block padding https://bugs.webkit.org/show_bug.cgi?id=285286 <rdar://problem/142321535>

Reviewed by Antti Koivisto.

The available space for out-of-flow content is the containing block's padding box (as opposed to  the size of content box).

* LayoutTests/fast/inline/out-of-flow-content-with-padding-percent-expected.html: Added.
* LayoutTests/fast/inline/out-of-flow-content-with-padding-percent.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutInlineContent):

Canonical link: https://commits.webkit.org/288460@main